[metadata]
name = Pint
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Physical quantities module
long_description = file: README.rst
keywords = physical, quantities, unit, conversion, science
url = https://github.com/hgrecco/pint
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = pint
zip_safe = True
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools; setuptools_scm
install_requires = appdirs
scripts = pint/pint-convert

[options.extras_require]
numpy = numpy >= 1.19.5
uncertainties = uncertainties >= 3.1.6
test =
    pytest
    pytest-mpl
    pytest-cov
    pytest-subtests

[options.package_data]
pint = default_en.txt; constants_en.txt; py.typed

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[isort]
default_section=THIRDPARTY
known_first_party=pint
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py
